# box-notebook

./: .gitignore  DEPLOY.md  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  start.sh
frontend/: App.vue  api.js  index.html  main.js  package-lock.json  package.json  router.js  services.js  vite.config.js
frontend/views/: Home.vue  Login.vue
src/storage_box/: auth.py  main.py  models.py  schemas.py  storage.py  user_storage.py
